float_eq/tests/derive_tests/ulps_tol/ulps_tol_missing_type_name.stderr
error: Missing ULPs tolerance type name required to derive trait.

       help: try adding `#[float_eq(ulps_tol = "MyComplex32Ulps")]` to your type.
 --> $DIR/ulps_tol_missing_type_name.rs:3:41
  |
3 | #[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsTol)]
  |                                         ^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `FloatEqUlpsTol` (in Nightly builds, run with -Z macro-backtrace for more info)
