float_eq/tests/derive_tests/ulps_tol/ulps_tol_missing_type_name.rs
use float_eq::FloatEqUlpsTol;

#[derive(Debug, Clone, Copy, PartialEq, FloatEqUlpsTol)]
struct MyComplex32 {
    re: f32,
    im: f32,
}

fn main() {}
